syntax = "proto3";
package user;
option go_package="github.com/hussammohammed/marketplace-go-microservices/gateway/server/grpcClients/protos/user";

service User{
    // check user service health
    rpc CheckHealth(CheckHealthRequest) returns (CheckHealthResponse){};
}
message CheckHealthRequest{}

message CheckHealthResponse{
    int32 statusCode =1;
    string status =2;
}